// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the empty-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the empty-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "typescriptPage",
        "pageIdentifier": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "someOtherPage",
        "pageIdentifier": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "fooPage",
        "pageIdentifier": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "barPage",
        "pageIdentifier": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "privatePage",
        "pageIdentifier": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "typescriptPage",
        "pageIdentifier": "TypeScriptPage",
        "path": "/typescript",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "someOtherPage",
        "pageIdentifier": "EditUserPage",
        "path": "/somewhereElse",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "fooPage",
        "pageIdentifier": "FooPage",
        "path": "/foo",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "barPage",
        "pageIdentifier": "BarPage",
        "path": "/bar",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "privatePage",
        "pageIdentifier": "PrivatePage",
        "path": "/private-page",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [
      "No notfound route detected",
      "Multiple routes named home are present",
    ],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "something-else",
        "pageIdentifier": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "Routes",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the example-todo-main-with-errors fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [
      "No notfound route detected",
      "Multiple routes named home are present",
    ],
    "filepath": "/web/src/Routes.js",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "something-else",
        "pageIdentifier": "DoesNotExist",
        "path": "/{foo}/{foo}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.js",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "Routes",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": false,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers with a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "login",
        "pageIdentifier": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "signup",
        "pageIdentifier": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "forgotPassword",
        "pageIdentifier": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "resetPassword",
        "pageIdentifier": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newContact",
        "pageIdentifier": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editContact",
        "pageIdentifier": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contact",
        "pageIdentifier": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contacts",
        "pageIdentifier": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newPost",
        "pageIdentifier": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editPost",
        "pageIdentifier": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "post",
        "pageIdentifier": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "posts",
        "pageIdentifier": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "waterfall",
        "pageIdentifier": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "profile",
        "pageIdentifier": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "blogPost",
        "pageIdentifier": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contactUs",
        "pageIdentifier": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "about",
        "pageIdentifier": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;

exports[`From within the test-project fixture returns the correct routers without a project 1`] = `
[
  RedwoodRouter {
    "errors": [],
    "filepath": "/web/src/Routes.tsx",
    "name": "Routes",
    "routes": [
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "login",
        "pageIdentifier": "LoginPage",
        "path": "/login",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "signup",
        "pageIdentifier": "SignupPage",
        "path": "/signup",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "forgotPassword",
        "pageIdentifier": "ForgotPasswordPage",
        "path": "/forgot-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "resetPassword",
        "pageIdentifier": "ResetPasswordPage",
        "path": "/reset-password",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newContact",
        "pageIdentifier": "ContactNewContactPage",
        "path": "/contacts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editContact",
        "pageIdentifier": "ContactEditContactPage",
        "path": "/contacts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contact",
        "pageIdentifier": "ContactContactPage",
        "path": "/contacts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contacts",
        "pageIdentifier": "ContactContactsPage",
        "path": "/contacts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "newPost",
        "pageIdentifier": "PostNewPostPage",
        "path": "/posts/new",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "editPost",
        "pageIdentifier": "PostEditPostPage",
        "path": "/posts/{id:Int}/edit",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "post",
        "pageIdentifier": "PostPostPage",
        "path": "/posts/{id:Int}",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "posts",
        "pageIdentifier": "PostPostsPage",
        "path": "/posts",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "waterfall",
        "pageIdentifier": "WaterfallPage",
        "path": "/waterfall/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": true,
        "name": "profile",
        "pageIdentifier": "ProfilePage",
        "path": "/profile",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": true,
        "isNotFound": false,
        "isPrivate": false,
        "name": "blogPost",
        "pageIdentifier": "BlogPostPage",
        "path": "/blog-post/{id:Int}",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "contactUs",
        "pageIdentifier": "ContactUsPage",
        "path": "/contact",
        "prerender": false,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "about",
        "pageIdentifier": "AboutPage",
        "path": "/about",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": false,
        "isPrivate": false,
        "name": "home",
        "pageIdentifier": "HomePage",
        "path": "/",
        "prerender": true,
        "warnings": [],
      },
      RedwoodRoute {
        "errors": [],
        "filepath": "/web/src/Routes.tsx",
        "hasParameters": false,
        "isNotFound": true,
        "isPrivate": false,
        "name": "notfound",
        "pageIdentifier": "NotFoundPage",
        "path": undefined,
        "prerender": true,
        "warnings": [],
      },
    ],
    "warnings": [],
  },
]
`;
